--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -135,15 +135,15 @@
                         }
                     </style>
                     <ul class="link" style="margin: 0 0;padding-left: 0">
-                        <li class="link-item">111</li>
-                        <li class="link-item">222</li>
-                        <li class="link-item">333</li>
-                        <li class="link-item">444</li>
-                        <li class="link-item">555</li>
-                        <li class="link-item">666</li>
-                        <li class="link-item">444</li>
-                        <li class="link-item">555</li>
-                        <li class="link-item">666</li>
+                        <li class="link-item"><a href="" target="_blank">Github</a></li>
+                        <li class="link-item"><a href="" target="_blank">CnBlogs</a></li>
+                        <li class="link-item"><a href="" target="_blank">Microsoft</a></li>
+                        <li class="link-item"><a href="" target="_blank">虚</a></li>
+                        <li class="link-item"><a href="" target="_blank">位</a></li>
+                        <li class="link-item"><a href="" target="_blank">以</a></li>
+                        <li class="link-item"><a href="" target="_blank">待</a></li>
+                        <li class="link-item"><a href="" target="_blank">!</a></li>
+                        <li class="link-item"><a href="links">更多</a></li>
                     </ul>
                 </div>
 
@@ -157,7 +157,7 @@
 
                     <div style="margin: 0 0">
                         <div style="float:right;width:35%;">
-                            <img height="100%" width="100%" src="https://liuyanzhao.com/wp-content/uploads/2018/09/wechat.jpg">
+                            <img height="100%" width="100%" src="https://raw.githubusercontent.com/liuzhenyulive/iBlogs/Development/wechart.png">
                         </div>
                         <div style="margin-right:35%;padding-right:5px;">
                             <p style="margin: 0 0">码农阿宇,常年活动在杭州周边,如果你需要我,欢迎扫面右边微信二维码与我联系.</p>
