--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -121,31 +121,16 @@
                         <svg viewBox="0 0 54.971 54.971" width="10" height="10">
                             <g><path d="M51.173,3.801c-5.068-5.068-13.315-5.066-18.384,0l-9.192,9.192c-0.781,0.781-0.781,2.047,0,2.828c0.781,0.781,2.047,0.781,2.828,0l9.192-9.192c1.691-1.69,3.951-2.622,6.363-2.622c2.413,0,4.673,0.932,6.364,2.623s2.623,3.951,2.623,6.364c0,2.412-0.932,4.672-2.623,6.363L36.325,31.379c-3.51,3.508-9.219,3.508-12.729,0c-0.781-0.781-2.047-0.781-2.828,0s-0.781,2.048,0,2.828c2.534,2.534,5.863,3.801,9.192,3.801s6.658-1.267,9.192-3.801l12.021-12.021c2.447-2.446,3.795-5.711,3.795-9.192C54.968,9.512,53.62,6.248,51.173,3.801z" /><path d="M27.132,40.57l-7.778,7.778c-1.691,1.691-3.951,2.623-6.364,2.623c-2.412,0-4.673-0.932-6.364-2.623c-3.509-3.509-3.509-9.219,0-12.728L17.94,24.306c1.691-1.69,3.951-2.622,6.364-2.622c2.412,0,4.672,0.932,6.363,2.622c0.781,0.781,2.047,0.781,2.828,0s0.781-2.047,0-2.828c-5.067-5.067-13.314-5.068-18.384,0L3.797,32.793c-2.446,2.446-3.794,5.711-3.794,9.192c0,3.48,1.348,6.745,3.795,9.191c2.446,2.447,5.711,3.795,9.191,3.795c3.481,0,6.746-1.348,9.192-3.795l7.778-7.778c0.781-0.781,0.781-2.047,0-2.828S27.913,39.789,27.132,40.57z" /></g>
                         </svg>
-                        &nbsp 友链
+                        &nbsp 关注博主
                     </h3>
-                    <style>
-                        .link {
-                            overflow: hidden;
-                            width: 100%;
-                        }
-
-                        .link-item {
-                            width: 33.333%;
-                            float: left;
-                            padding: 0 5px 0;
-                        }
-                    </style>
-                    <ul class="link" style="margin: 0 0;padding-left: 0">
-                        <li class="link-item"><a href="" target="_blank">Github</a></li>
-                        <li class="link-item"><a href="" target="_blank">CnBlogs</a></li>
-                        <li class="link-item"><a href="" target="_blank">Microsoft</a></li>
-                        <li class="link-item"><a href="" target="_blank">虚</a></li>
-                        <li class="link-item"><a href="" target="_blank">位</a></li>
-                        <li class="link-item"><a href="" target="_blank">以</a></li>
-                        <li class="link-item"><a href="" target="_blank">待</a></li>
-                        <li class="link-item"><a href="" target="_blank">!</a></li>
-                        <li class="link-item"><a href="links">更多</a></li>
-                    </ul>
+                    <div style="margin: 0 0">
+                        <div style="float:right;width:35%;">
+                            <img height="100%" width="100%" src="https://raw.githubusercontent.com/liuzhenyulive/iBlogs/Development/coderayu.png">
+                        </div>
+                        <div style="margin-right:35%;padding-right:5px;">
+                            <p style="margin: 0 0">码农阿宇,已对接此博客系统,自动推送iBlogs最新文章,功能更新通知,老司机开车福利等,来不及解释了,快上车!</p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="meta-item meta-comments">
@@ -161,7 +146,7 @@
                             <img height="100%" width="100%" src="https://raw.githubusercontent.com/liuzhenyulive/iBlogs/Development/liuzhenyu.png">
                         </div>
                         <div style="margin-right:35%;padding-right:5px;">
-                            <p style="margin: 0 0">码农阿宇,常年活动在杭州周边,如果你需要我,欢迎扫面右边微信二维码与我联系.</p>
+                            <p style="margin: 0 0">刘振宇,常年活动在杭州周边,如果你需要我,欢迎扫面右边微信二维码与我联系.</p>
                             <a style="margin: 0 0" href="mailto:liuzhenyulive@live.com?subject=Mail from iBlogs">liuzhenyulive@live.com</a>
                         </div>
                     </div>
