update type to enum

--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -55,20 +55,20 @@
                                         <td>{{ item.categories }}</td>
                                         <td>
                                             <span v-show="item.status == 'Publish'" class="label label-success">已发布</span>
-                                            <span v-show="item.status == 'draft'" class="label label-default">草稿</span>
+                                            <span v-show="item.status == 'Draft'" class="label label-default">草稿</span>
                                         </td>
                                         <td>
                                             <a :href="'/admin/article/edit/' + item.id"
                                                class="btn btn-primary btn-sm waves-effect waves-light m-b-5">
                                                 <i class="fa fa-edit"></i> <span>编辑</span>
                                             </a>
-                                            <a v-on:click="DeleteArticle(item.id)" href="javascript:void(0)"
+                                            <a v-on:click="deleteArticle(item.id)" href="javascript:void(0)"
                                                class="btn btn-danger btn-sm waves-effect waves-light m-b-5">
                                                 <i class="fa fa-trash-o"></i> <span>删除</span>
                                             </a>
                                             <a v-show="item.status == 'Publish'"
                                                class="btn btn-warning btn-sm waves-effect waves-light m-b-5"
-                                               :href="'${SiteUrl()}' + item.url"
+                                               :href="'../article/' + item.slug"
                                                target="_blank">
                                                 <i class="fa fa-rocket"></i> <span>预览</span>
                                             </a>
