--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Login/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Login/Index.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta content="${_csrf_token}" name="csrf_token" />
     <link rel="shortcut icon" href="/static/admin/images/favicon.png" />
-    <title>Tale - 用户登录</title>
+    <title>iBlogs - 用户登录</title>
     <link href="@ViewService.CdnURL()/plugins/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="@ViewService.CdnURL()/plugins/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
     <link href="@ViewService.CdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.css" rel="stylesheet">
