--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Pages/Edit.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Pages/Edit.cshtml
@@ -149,10 +149,10 @@
                     <div class="form-group col-md-6">
                         <div class="text-right">
                             <a class="btn btn-default waves-effect waves-light" href="/admin/pages">返回列表</a>
-                            <button type="button" class="btn btn-primary waves-effect waves-light" v-on:click="Publish('Publish')">
+                            <button type="button" class="btn btn-primary waves-effect waves-light" v-on:click="publish('Publish')">
                                 发布页面
                             </button>
-                            <button type="button" class="btn btn-warning waves-effect waves-light" v-on:click="Publish('draft')">
+                            <button type="button" class="btn btn-warning waves-effect waves-light" v-on:click="publish('draft')">
                                 存为草稿
                             </button>
                         </div>
