--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Attaches/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Attaches/Index.cshtml
@@ -90,7 +90,7 @@
                                 <i class="fa fa-copy"></i> <span>复制</span>
                             </button>
                             <button type="button" class="btn btn-danger btn-sm waves-effect waves-light m-t-5"
-                                    v-on:click="DeleteAttach(item.id)">
+                                    v-on:click="deleteAttach(item.id)">
                                 <i class="fa fa-trash-o"></i> <span>删除</span>
                             </button>
                         </div>
