--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Categories/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Categories/Index.cshtml
@@ -29,7 +29,7 @@
                                             <a class="edit-category" v-on:click="edit(index)">修改</a>
                                         </li>
                                         <li>
-                                            <a class="del-category" v-on:click="DeleteCategory(item.id)">删除</a>
+                                            <a class="del-category" v-on:click="deleteCategory(item.id)">删除</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -49,7 +49,7 @@
                                     </button>
                                     &nbsp;
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a class="del-category" v-on:click="DeleteCategory(item.id)">删除</a></li>
+                                        <li><a class="del-category" v-on:click="deleteCategory(item.id)">删除</a></li>
                                     </ul>
                                 </div>
                             </div>
