update config to enum

--- a/src/iBlogs.Site.Web/Views/Install/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Install/Index.cshtml
@@ -172,7 +172,7 @@
         }
         else
         {
-        <h5>你已经安装过Tale了，如需重新安装请提前做好备份，并删除根目录下的<mark>@Configuration[ConfigKey.SqLiteDbFileName]</mark>文件。</h5>
+        <h5>你已经安装过Tale了.</h5>
         }
     </div>
         <script src="@Model.CdnUrl/plugins/jquery/3.2.1/jquery.min.js"></script>
