--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -59,7 +59,7 @@
             <div class="topbar-left">
                 <div class="text-center p-t-10" style="margin: 0 auto;">
                     <div class="pull-left" style="padding-left: 10px;">
-                        <a href="/admin">
+                        <a href="../">
                             <img src="/static/admin/images/unicorn.png" width="50" height="50" />
                         </a>
                     </div>
