Add install auto restart to make it effective

--- a/src/iBlogs.Site.Web/Views/Install/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Install/Index.cshtml
@@ -159,7 +159,7 @@
                                 <section>
                                     <div class="form-group clearfix">
                                         <div class="col-lg-12 text-center">
-                                            <h3>恭喜你，安装完成！</h3>
+                                            <h3>配置成功写入,系统将自动关闭,重启生效.</h3>
                                         </div>
                                     </div>
                                 </section>
