Add build number to view

--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -109,9 +109,11 @@
                         <div class="info-text">
                             <p>Always coding,Always writing!</p>
                             <p>
-                                Powered by <a href="https://github.com/liuzhenyulive/iblogs" target="_blank">iBlogs</a>
+                                Powered by <a href="https://github.com/liuzhenyulive/iblogs" target="_blank">iBlogs</a> &copy; @DateTime.Now.Year <a href="https://github.com/liuzhenyulive" target="_blank">Liu, zhenyu</a>
                             </p>
-                            <p>&copy; @DateTime.Now.Year <a href="https://github.com/liuzhenyulive" target="_blank">Liu, zhenyu</a></p>
+                            <p>
+                                Azure Build Number:<a href="https://dev.azure.com/ZhenyuDevOps/iBlogs/_build/latest?definitionId=1&branchName=master" target="_blank">@ViewService.BuildNumber()</a>
+                            </p>
                         </div>
                     </div>
                 </div>
