--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -181,7 +181,7 @@
                 <div class="container">
                     @RenderBody()
                     <footer class="footer text-right">
-                        2019 © <a href="https://github.com/liuzhenyulive/iBlogs" target="_blank">iBlogs</a>.
+                        2019 © <a href="https://github.com/liuzhenyulive/iBlogs" target="_blank">iBlogs</a>.Build Number: @ViewService.BuildNumber()
                     </footer>
                 </div>
             </div>
