--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -133,7 +133,7 @@
                             <img height="100%" width="100%" src="https://raw.githubusercontent.com/liuzhenyulive/iBlogs/Development/coderayu.png">
                         </div>
                         <div style="margin-right:35%;padding-right:5px;" class="info-text">
-                            <p style="margin: 0 0">码农阿宇,已对接此博客系统的公众号,深度技术,实用干货,扫码跟我开车.</p>
+                            <p style="margin: 0 0">码农阿宇,已对接此博客系统的公众号,深度技术,实用干货,扫码发车.</p>
                             <p style="margin: 0 0">Scan code to start.</p>
                         </div>
                     </div>
