--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/Profile/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/Profile/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using iBlogs.Site.Core.Common.Service
-@using iBlogs.Site.Core.User.Service
+@using iBlogs.Site.Core.Security.Service
 @inject IUserService UserService
 @inject IViewService ViewService
 <div class="row">
