--- a/Src/iBlogs.Site.Web/Views/Index/Archive.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Index/Archive.cshtml
@@ -1,4 +1,4 @@
-﻿@model iBlogs.Site.Core.Common.Response.Page<iBlogs.Site.Core.Content.DTO.Archive>
+﻿@model iBlogs.Site.Core.Common.Response.Page<iBlogs.Site.Core.Blog.Content.DTO.Archive>
 <main role="main" class="App-main">
     <div class="Topstory">
         <div class="Topstory-container">
