--- a/Src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
@@ -1,4 +1,4 @@
-﻿@model iBlogs.Site.Core.Meta.DTO.MetaDataViewModel
+﻿@model iBlogs.Site.Core.Blog.Meta.DTO.MetaDataViewModel
 <main role="main" class="App-main">
     <div class="Topstory">
         <div class="Topstory-container">
