--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -165,6 +165,11 @@
                                 </li>
                             </ul>
                         </li>
+                        <li @((string) ViewData["title"] == "options" ? "active" : "")>
+                            <a href="/admin/options" class="waves-effect @((string) ViewData["title"]=="comments"?"active":"")">
+                                <i class="fa fa-cogs" aria-hidden="true"></i><span> 系统配置 </span>
+                            </a>
+                        </li>
                         <li @((string) ViewData["title"] == "setting" ? "active" : "")>
                             <a href="/admin/setting" class="waves-effect @((string) ViewData["title"]=="setting"?"active":"")">
                                 <i class="fa fa-gear" aria-hidden="true"></i><span> 系统设置 </span>
