--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/Options/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/Options/Index.cshtml
@@ -1,88 +1,142 @@
-﻿
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th class="">№</th>
-            <th class="">Name</th>
-            <th class="">Email/Login</th>
-            <th class="">Phone</th>
-            <th class="">Skype</th>
-            <th class="">Role</th>
-            <th class="">Edit</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td style="text-align:center;" class="">1</td>
-            <td class="">user123</td>
-            <td style="text-align:center;" class="">123@hotmail.com</td>
-            <td style="text-align:center;" class="">0123456</td>
-            <td style="text-align:center;" class="">user123</td>
-            <td style="text-align:center;" class="">Admin</td>
-            <td style="text-align:center;">
-                <button class="btn btn-success" data-toggle="modal" data-target="#myModal" contenteditable="false">Edit</button>
-            </td>
-        </tr>
-        <tr>
-            <td style="text-align:center;" class="">2</td>
-            <td class="">user456</td>
-            <td style="text-align:center;" class="">456@hotmail.com</td>
-            <td style="text-align:center;" class="">0123458</td>
-            <td style="text-align:center;" class="">user456</td>
-            <td style="text-align:center;" class="">User</td>
-            <td style="text-align:center;">
-                <button class="btn btn-success" data-toggle="modal" data-target="#myModal">Edit</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    @*<div class="modal-dialog">
-        <div class="modal-content"></div>
-    </div>
-    <div class="modal-dialog">
-        <div class="modal-content"></div>
-    </div>*@
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true" class="">×   </span><span class="sr-only">Close</span>
-
-                </button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-
+﻿<div id="app" class="row" v-cloak>
+    <loading :active.sync="isLoading" :can-cancel="true"></loading>
+    <div class="col-lg-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">系统配置</h3>
             </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>编号</th>
+                                <th style="text-align:center;" width="10%">Key</th>
+                                <th style="text-align:center;" width="30%">Value</th>
+                                <th style="text-align:center;" width="30%">描述</th>
+                                <th style="text-align:center;">操作</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr v-for="item in options">
+                                <td style="text-align:center;">{{ item.id }}</td>
+                                <td style="text-align:center;">{{ item.key }}</td>
+                                <td style="text-align:center;">{{ item.value }}</td>
+                                <td style="text-align:center;">{{ item.description }}</td>
+                                <td style="text-align:center;">
+                                    <button class="btn btn-success" data-toggle="modal" data-target="#myModal" v-on:click="optionEdit(item.id,item.key,item.value,item.description)">
+                                        <i class="fa fa-edit"></i> <span>编辑</span>
+                                    </button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">
+                                            <span aria-hidden="true" class="">×   </span><span class="sr-only">Close</span>
+
+                                        </button>
+                                        <h4 class="modal-title" id="myModalLabel">配置编辑</h4>
+
+                                    </div>
+                                    <div class="modal-body"></div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                                        <button type="button" class="btn btn-primary" v-on:click="save()">保存</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<script>
-    $(".btn[data-target='#myModal']").click(function () {
-        var columnHeadings = $("thead th").map(function () {
-            return $(this).text();
-        }).get();
-        columnHeadings.pop();
-        var columnValues = $(this).parent().siblings().map(function () {
-            return $(this).text();
-        }).get();
-        alert(columnValues);
-        var modalBody = $('<div id="modalContent"></div>');
-        var modalForm = $('<form role="form" name="modalForm" action="putYourPHPActionHere.php" method="post"></form>');
-        $.each(columnHeadings, function (i, columnHeader) {
-            var formGroup = $('<div class="form-group"></div>');
-            formGroup.append('<label for="' + columnHeader + '">' + columnHeader + '</label>');
-            formGroup.append('<input class="form-control" name="' + columnHeader + i + '" id="' + columnHeader + i + '" value="' + columnValues[i] + '" />');
-            modalForm.append(formGroup);
+
+
+@section scripts
+{
+    <script>
+        var tale = new $.tale();
+        var vm = new Vue({
+            el: '#app',
+            data: {
+                options: {},
+                isLoading: true
+            },
+            beforeCreate: function() {
+                vueLoding = this.$loading.show();
+            },
+            mounted: function() {
+                this.load();
+            },
+            methods: {
+                load: function() {
+                    var $vm = this;
+                    tale.get({
+                        url: '/admin/api/options/GetAll',
+                        success: function(data) {
+                            $vm.options = data.payload;
+                        },
+                        error: function(error) {
+                            console.log(error);
+                            alert(result.msg || '数据加载失败');
+                        }
+                    });
+                },
+                optionEdit: function(id, key, value, description) {
+                    var modalBody = $('<div id="modalContent"></div>');
+                    var modalForm = $('<form role="form" id="modalForm"></form>');
+                    var formGroup = $('<div class="form-group"></div>');
+                    formGroup.append('<input type="hidden" id="id" name="id" value="' + id + '" />');
+                    formGroup.append('<label for="key">key</label>');
+                    formGroup.append('<input class="form-control" name="key" id="key" value="' + key + '" readonly="readonly" />');
+                    formGroup.append('<label for="key">value</label>');
+                    formGroup.append('<input class="form-control" name="value" id="vale" value="' + value + '" />');
+                    formGroup.append('<label for="key">描述</label>');
+                    formGroup.append('<input class="form-control" name="description" id="description" value="' +
+                        description +
+                        '" />');
+                    modalForm.append(formGroup);
+
+                    modalBody.append(modalForm);
+                    $('.modal-body').html(modalBody);
+                },
+                save: function () {
+                    var $vm = this;
+                    var form = $("#modalForm");
+                    $.ajax({
+                        url : '/admin/api/options/update',
+                        data: form.serialize(),
+                        type: 'POST',
+                        success: function (data) {
+                            if (data && data.success) {
+                                $vm.load();
+                                tale.alertOk('保存成功');
+                                $('#myModal').modal('hide');
+                            } else {
+                                tale.alertError(result.msg || '保存失败');
+                            }
+                        },
+                        error: function(error) {
+                            console.log(error);
+                            alert(error.msg || '数据加载失败');
+                        }
+                    });
+                }
+            }
         });
-        modalBody.append(modalForm);
-        $('.modal-body').html(modalBody);
-    });
-    $('.modal-footer .btn-primary').click(function () {
-        $('form[name="modalForm"]').submit();
-    });
-</script>
+
+
+        $(document).ready(function() {
+            vm.isLoading = false;
+            vueLoding.hide();
+        });
+
+    </script>
+}
