--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -200,15 +200,15 @@
                             <div class="panel-body">
                                 <ul class="list-group">
                                     <li class="list-group-item" v-for="item in logPage.rows">
-                                        <span>{{item.timestamp | formatUnix}} &nbsp;&nbsp;Level:{{item.level}}<br /><kbd>{{item.message}}</kbd></span>
+                                        <span>{{item.timestamp | formatUnix}} &nbsp;&nbsp;Level:{{item.level}}<br />{{item.message}}</span>
                                     </li>
                                 </ul>
                                 <ul class="pager">
                                     <li v-if="logPage.hasPrevPage">
-                                        <a v-on:click="load(logPage.prevPage)"> <i class="fa fa-angle-double-left"></i> 上一页</a>
+                                        <a  class="btn" v-on:click="load(logPage.prevPage)"> <i class="fa fa-angle-double-left"></i> 上一页</a>
                                     </li>
                                     <li v-if="logPage.hasNextPage">
-                                        <a v-on:click="load(logPage.nextPage)">下一页 <i class="fa fa-angle-double-right"></i> </a>
+                                        <a  class="btn" v-on:click="load(logPage.nextPage)">下一页 <i class="fa fa-angle-double-right"></i> </a>
                                     </li>
                                 </ul>
                             </div>
