--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/Comments/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/Comments/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div id="app" class="row" v-cloak>
+﻿@using iBlogs.Site.Core.Common.Service
+@inject IViewService ViewService
+
+<div id="app" class="row" v-cloak>
     <loading :active.sync="isLoading" :can-cancel="true"></loading>
     <div class="col-lg-12">
         <div class="panel panel-primary">
@@ -37,21 +40,15 @@
                                 <td>{{ item.mail }}</td>
                                 <td>{{ item.url }}</td>
                                 <td>
-                                    <div v-if="item.status == 'approved'">
-                                        <span v-if="item.authorId == ${login_user.uid}" class="label label-success">后台回复</span>
-                                        <span v-if="item.status == 'approved'" class="label label-success">审核通过</span>
-                                    </div>
-                                    <div v-show="item.status == 'no_audit'">
-                                        <span v-if="item.authorId == ${login_user.uid}" class="label label-default">后台回复</span>
-                                        <span v-if="item.status == 'no_audit'" class="label label-default">未审核</span>
-                                    </div>
+                                    <span v-if="item.status == 'Approved'" class="label label-success">审核通过</span>
+                                    <span v-if="item.status == 'Pending'" class="label label-default">未审核</span>
                                 </td>
                                 <td>
-                                    <button v-if="item.authorId != ${login_user.uid}" class="btn btn-primary btn-sm waves-effect waves-light m-b-5" click="reply(item.coid)"><i class="fa fa-reply"></i> 回复</button>
-                                    <button v-if="item.status == 'no_audit' && item.authorId != ${login_user.uid}" class="btn btn-success btn-sm waves-effect waves-light m-b-5" click="audit(item.coid, 'approved')">
+                                    <button class="btn btn-primary btn-sm waves-effect waves-light m-b-5" v-on:click="reply(item.id,item.author)"><i class="fa fa-reply"></i> 回复</button>
+                                    <button v-if="item.status == 'Pending'" class="btn btn-success btn-sm waves-effect waves-light m-b-5" v-on:click="audit(item.id, 'Approved')">
                                         <span><i class="fa fa-check-circle"></i> 通过</span>
                                     </button>
-                                    <button class="btn btn-danger btn-sm waves-effect waves-light m-b-5" click="DeleteCommentDto(item.coid)"><i class="fa fa-trash-o"></i> 删除</button>
+                                    <button class="btn btn-danger btn-sm waves-effect waves-light m-b-5" v-on:click="deleteComment(item.id)"><i class="fa fa-trash-o"></i> 删除</button>
                                 </td>
                             </tr>
                         </tbody>
@@ -83,7 +80,7 @@
 </div>
 @section scripts
 {
-<script>
+    <script>
         var tale = new $.tale();
         var vm = new Vue({
             el: '#app',
@@ -109,9 +106,10 @@
                             limit: 12
                         },
                         success: function (data) {
-                            $vm.commentPage = data.payload
                             if (!data.payload.rows) {
-                                $vm.commentPage.rows = []
+                                $vm.commentPage = [];
+                            } else {
+                                $vm.commentPage = data.payload;
                             }
                         },
                         error: function (error) {
@@ -120,12 +118,13 @@
                         }
                     });
                 },
-                reply: function (coid) {
+                reply: function (coid, author) {
                     var $vm = this;
                     swal({
                         title: "回复评论",
                         text: "请输入你要回复的内容:",
                         input: 'text',
+                        inputValue: '@@' + author + ' ',
                         showCancelButton: true,
                         confirmButtonText: '回复',
                         cancelButtonText: '取消',
@@ -190,5 +189,5 @@
             vm.isLoading = false;
             vueLoding.hide();
         });
-</script>
+    </script>
 }
