--- a/Src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -197,14 +197,17 @@
         });
         InstantClick.init('mousedown');
     </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145058275-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    @if (!ViewService.SiteOption(ConfigKey.GoogleAnalyticId).IsNullOrWhiteSpace())
+    {
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145058275-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
 
-        gtag('config', 'UA-145058275-1');
-    </script>
+            gtag('config', '@ViewService.SiteOption(ConfigKey.GoogleAnalyticId)');
+        </script>
+    }
 </body>
 </html>
